fixed whitespace issue

--- a/style.css
+++ b/style.css
@@ -3793,11 +3793,13 @@
    .page-banner {
      position: relative;
      margin-top: 42px;
+     background-color: #152731;
    }
 
    .page-banner img {
      width: 100%;
      height: 300px;
+     object-fit: contain;
    }
 
    .page-banner h1 {
@@ -3807,13 +3809,6 @@
      left: 50%;
      transform: translate(-50%, -50%);
      z-index: 1;
-   }
-
-   @media (max-width: 900px) {
-
-     .page-banner img {
-       height: 180px;
-     }
    }
    
    /*--------------------------------------------------------------
@@ -11194,7 +11189,7 @@
    /* Process */
    .section-tab {
      max-width: 1530px;
-     padding: 110px 20px 90px 20px;
+     padding: 70px 20px 70px 20px;
      margin-right: auto;
      margin-left: auto;
      background-image: linear-gradient(145deg,#0039e4 0%,#04dbf1 100%);
@@ -12073,6 +12068,12 @@
      .error-404 h2 {
        font-size: 150px;
        display: block;
+     }
+   }
+
+   @media (max-width: 450px) {
+     .page-banner img {
+       height: 200px;
      }
    }
    /*--------------------------------------------------------------
